[package]
name = "tinject"
version = "1.0.0"
description = "Tinject - Minecraft Forge DLL Injector"
authors = ["Tinject"]
edition = "2021"

[dependencies]
wry = "0.47"
tao = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }
rfd = "0.14"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
thiserror = "1"
percent-encoding = "2"
include_dir = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
